cabal-version:      3.0
name:               tc
version:            0.0.0.1
synopsis:           Tensor Calculus
homepage:           https://github.com/ih1d/tc
license:            NONE
author:             Isaac Hiram Lopez Diaz
maintainer:         isaac.lopez@upr.edu
category:           Data
build-type:         Simple
extra-doc-files:    
    CHANGELOG.md
    README.md

library
    ghc-options:      -Wall
    exposed-modules:  Tensor
    build-depends:    base ^>=4.17.2.1
                    , primitive
    hs-source-dirs:   src
    default-language: Haskell2010
